2006-05-28  Kevin Ryde  <user42@zip.com.au>

	* configure.in (isnan): Remove "#ifdef __MINGW32__, #define isnan
	_isnan".  Mingw provides isnan as a macro (in math.h), the test
	already detects it just fine with no special case.

2006-05-26  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_CHECK_FUNCS): Add ioctl.
	(pthread_attr_getstack): Restrict test to pthreads case, to avoid
	AC_TRY_RUN when cross-compiling --without-threads.

2006-05-20  Kevin Ryde  <user42@zip.com.au>

	* configure.in (S_ISLNK): Remove test, leave it to #ifdef in the .c
	files.
	
2006-05-16  Kevin Ryde  <user42@zip.com.au>

	* configure.in (struct stat st_blocks): Change AC_STRUCT_ST_BLOCKS to
	a plain AC_CHECK_MEMBERS, we don't want AC_LIBOBJ(fileblocks) which
	the former gives.  Remove the commented-out code that was to have
	munged fileblocks out of LIBOBJS.  This fixes mingw, where the lack of
	st_blocks and absense of the fileblocks.c replacement caused build
	failure.  Reported by "The Senator".
	(struct stat st_rdev, st_blksize): Combine into a single
	AC_CHECK_MEMBERS.

2006-04-18  Rob Browning  <rlb@defaultvalue.org>

	* configure.in: Add AC_CONFIG_AUX_DIR([.]) as suggested in the
	autotools documentation.

2006-04-16  Kevin Ryde  <user42@zip.com.au>

	* configure.in (stat64, off_t): New tests.

2006-03-31  Kevin Ryde  <user42@zip.com.au>

	* configure.in (socklen_t): Enhance test for this type, coping with
	need for <sys/socket.h> on MacOS X.  Reported by Michael Tuexen and
	Jay Cotton.

2006-03-26  Marius Vollmer  <mvo@zagadka.de>

	* configure.in: Added check that defines
	PTHREAD_ATTR_GETSTACK_WORKS when pthread_attr_getstack works for
	the main thread.

2006-02-26  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_CHECK_FUNCS): Add dirfd.

2006-02-20  Marius Vollmer  <mvo@zagadka.de>

	Released 1.8.0.

	* GUILE-VERSION: Set version.

2006-02-06  Marius Vollmer  <mvo@zagadka.de>

	Branched for 1.8 series.

	* GUILE-VERSION: Bumped version numbers.
	