@@ -31,6 +31,7 @@ For fixes or providing information which led to a fix:
       Alexandre Duret-Lutz
          John W Eaton
 	Clinton Ebadi
+        Charles Gagnon
           Peter Gavin
            Eric Gillespie, Jr
            John Goerzen
