@@ -1,3 +1,9 @@
+2006-06-06  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* acinclude.m4 (ACX_PTHREAD): Update to latest definition from
+	autoconf macro archive, to fix pthread linking problem on Solaris
+	10, reported by Charles Gagnon.
+
 2006-05-28  Kevin Ryde  <user42@zip.com.au>
 
 	* configure.in (isnan): Remove "#ifdef __MINGW32__, #define isnan
